feat: add transaction checkout and get report
