# internal/model/dto/product.go
@@ -1,4 +1,12 @@
-package reqdto
+package dto
+
+import "github.com/Muh-Sidik/kasir-api/internal/pkg/request"
+
+type ProductQuery struct {
+	Name       string `json:"name" validate:"required,min=3"`
+	CategoryID string `json:"category_id" validate:"required,uuid"`
+	*request.PaginateQuery
+}
 
 type ProductRequest struct {
 	Name       string `json:"name" validate:"required,min=3"`
